# arch-repo-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: CMakeLists.txt  config.cpp  config.h  main.cpp
cli/doc/: client-config-example.conf
libpkg/: CMakeLists.txt  global.h  lmdb-safe
libpkg/algo/: buildorder.cpp  licenses.cpp  search.cpp
libpkg/data/: config.cpp  config.h  database.cpp  database.h  lockable.cpp  lockable.h  mrulist.h  package.cpp  package.h  siglevel.h  storage.cpp  storagefwd.h  storagegeneric.h  storageprivate.h
libpkg/parser/: aur.cpp  aur.h  binary.cpp  binary.h  config.cpp  config.h  database.cpp  database.h  package.cpp  package.h  siglevel.cpp  utils.cpp  utils.h
libpkg/testfiles/: core.db  core.files  linux-4.7.6-1-desc  linux-4.7.6-1-files  mirrorlist  pacman.conf
libpkg/testfiles/c++utilities/: PKGBUILD  PKGBUILD.newepoch  PKGBUILD.newpkgrel  PKGBUILD.newpkgver  SRCINFO  desc  libc++utilities.so.4.3.0  libc++utilities.so.4.5.0
libpkg/testfiles/mingw-w64-harfbuzz/: BUILDINFO  PKGINFO  desc  mingw-w64-harfbuzz-1.4.2-1-any.pkg.tar.xz
libpkg/testfiles/perl/: perl-linux-desktopfiles-0.22-2-any.pkg.tar.xz
libpkg/testfiles/perl-data-dumper-concise/: PKGBUILD  PKGBUILD.newpkgrel
libpkg/testfiles/python/: sphinxbase-5prealpha-7-i686.pkg.tar.xz
libpkg/testfiles/repo/bar/: cmake-3.8.2-1-x86_64.pkg.tar.xz
libpkg/testfiles/repo/foo/: fake-0-any.pkg.tar.zst  mingw-w64-harfbuzz-1.4.2-1-any.pkg.tar.xz  syncthingtray-0.6.2-1-x86_64.pkg.tar.xz
libpkg/testfiles/syncthingtray/: libsyncthingconnector.so.0.6.2  libsyncthingmodel.so.0.6.2  libsyncthingwidgets.so.0.6.2  syncthingctl  syncthingtray  syncthingtray-0.6.2-1-x86_64.pkg.tar.xz
libpkg/tests/: data.cpp  parser.cpp  parser_binary.cpp  parser_helper.cpp  parser_helper.h  utils.cpp
librepomgr/: CMakeLists.txt  authentication.cpp  authentication.h  errorhandling.cpp  errorhandling.h  global.h  globallock.cpp  globallock.h  helper.h  json.cpp  json.h  logcontext.h  logging.h  multisession.h  namedlockable.cpp  namedlockable.h  resourceusage.cpp  resourceusage.h  serversetup.cpp  serversetup.h
librepomgr/buildactions/: buildaction.cpp  buildaction.h  buildactionfwd.h  buildactionlivestreaming.cpp  buildactionmeta.cpp  buildactionmeta.h  buildactionprivate.h  buildactiontemplate.cpp  buildactiontemplate.h  conductbuild.cpp  customcommand.cpp  makelicenseinfo.cpp  preparebuild.cpp  reloadconfiguration.cpp  reloaddatabase.cpp  reloadlibrarydependencies.cpp  repomanagement.cpp  subprocess.h  subprocessfwd.h  updatecheck.cpp
librepomgr/testfiles/: mirrorlist  pacman.conf  repo
librepomgr/testfiles/building/build-data/conduct-build-test/: build-preparation.json  build-progress.json
librepomgr/testfiles/building/build-data/conduct-build-test/bar/src/: .PKGINFO  bar-2-1-x86_64.pkg.tar.zst
librepomgr/testfiles/building/build-data/conduct-build-test/boost/src/: .SRCINFO
librepomgr/testfiles/building/build-data/conduct-build-test/foo/src/: .PKGINFO  foo-1-1-x86_64.pkg.tar.zst
librepomgr/testfiles/building/pkgbuilds/boost/: default
librepomgr/testfiles/building/pkgbuilds/gcc/mingw-w64/: .SRCINFO
librepomgr/testfiles/building/pkgbuilds/zstd/default/: .SRCINFO
librepomgr/testfiles/scripts/: fake_gpg.sh  fake_makechrootpkg.sh  fake_makepkg.sh  fake_repo_add.sh  fake_updatepkgsums.sh  print_some_data.sh
librepomgr/testfiles/test-config/: build-settings.json  presets.json  server.conf
librepomgr/testfiles/test-config/chroot-dir/config-x86_64/: makepkg.conf  pacman.conf
librepomgr/testfiles/test-config/fake-build-artefacts/: boost-1.73.0-1-x86_64.pkg.tar.zst  boost-libs-1.73.0-1-x86_64.pkg.tar.zst
librepomgr/testfiles/test-config/repos/boost-staging-debug/os/x86_64/: boost-debug.db  boost-debug.db.tar.xz
librepomgr/testfiles/test-config/repos/boost-staging/os/x86_64/: boost-staging.db  boost-staging.db.tar.zst
librepomgr/testfiles/test-config/repos/boost/os/x86_64/: boost-libs-1.72.0-2-x86_64.pkg.tar.zst  boost.db  boost.db.tar.zst
librepomgr/testfiles/test-config/repos/misc/os/any/: mingw-w64-crt-6.0.0-1-any.pkg.tar.xz  mingw-w64-harfbuzz-1.4.2-1-any.pkg.tar.xz  perl-linux-desktopfiles-0.22-2-any.pkg.tar.xz
librepomgr/testfiles/test-config/repos/misc/os/i686/: misc.db  misc.db.tar.zst  perl-linux-desktopfiles-0.22-2-any.pkg.tar.xz  perl-linux-desktopfiles-0.22-2-any.pkg.tar.xz.sig
librepomgr/testfiles/test-config/repos/misc/os/x86_64/: mingw-w64-crt-6.0.0-1-any.pkg.tar.xz  mingw-w64-crt-6.0.0-1-any.pkg.tar.xz.sig  mingw-w64-harfbuzz-1.4.2-1-any.pkg.tar.xz  mingw-w64-harfbuzz-1.4.2-1-any.pkg.tar.xz.sig  misc.db.tar.zst  source-highlight-3.1.9-2-x86_64.pkg.tar.zst  syncthingtray-0.6.2-1-x86_64.pkg.tar.xz
librepomgr/testfiles/test-config/sync-dbs/: core.db
librepomgr/tests/: buildactions.cpp  parser_helper.cpp  parser_helper.h  utils.cpp  webapi.cpp
librepomgr/webapi/: params.cpp  params.h  render.cpp  render.h  repository.cpp  repository.h  routeid.h  routes.cpp  routes.h  routes_buildaction.cpp  server.cpp  server.h  session.cpp  session.h  typedefs.h
librepomgr/webclient/: aur.cpp  aur.h  database.cpp  database.h  session.cpp  session.h
pacfind/: CMakeLists.txt  main.cpp
pacfind/tests/: check.cpp
pacparse/: CMakeLists.txt  main.cpp
pacparse/tests/: check.cpp
srv/: CMakeLists.txt  main.cpp
srv/cmake/modules/: SystemdService.cmake
srv/cmake/templates/: systemd.service.in  sysusers.conf.in  tmpfiles.conf.in
srv/doc/: build-settings-example.json  nginx-config-example.conf  presets-example.json  server-config-example.conf
srv/scripts/: set-permissions.sh
srv/static/: index.html  log.html  package-lock.json  package.json
srv/static/css/: genericrendering.css  layout.css  log.css  specifics.css
srv/static/js/: ajaxhelper.js  buildactionspage.js  customrendering.js  genericrendering.js  globalstatuspage.js  log.js  main.js  packagedetailspage.js  packagerendering.js  packagesearchpage.js  singlepage.js  terminal.js  utils.js
